added more styling

--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,12 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   flex-direction: column;
-  align-items: center;
   text-align: center;
   font-family: 'Noto Sans Display', sans-serif;
   font-weight: 300;
@@ -19,11 +24,6 @@ h5,
 h6 {
   font-weight: 400;
   color: #222222;
-}
-
-input {
-  margin: 3px 0;
-  border-radius: 5px;
 }
 
 a {
@@ -49,6 +49,7 @@ header {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 footer {
@@ -86,16 +87,6 @@ ul {
   padding-right: 40px;
 }
 
-.headerinfolink {
-  border: 1px black solid;
-  padding: 5px;
-}
-
-.headerinfolink:hover {
-  color: antiquewhite;
-  background-color: rgba(220, 20, 60, 60%);
-}
-
 .reservation_date_picker {
   display: none;
 }
@@ -104,9 +95,88 @@ ul {
   display: block;
 }
 
-.adminpanel section {
+section.container {
   border: 2px #3f3f3f solid;
   margin: 10px;
   padding: 10px;
   border-radius: 5px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+a.button {
+  background-color: rgba(89, 211, 168, 0.3);
+  border: 1px solid #3f3f3f;
+  border-radius: 10px;
+  color: #222;
+  margin: 5px;
+  padding: 10px;
+  white-space: nowrap;
+}
+
+a.button:hover {
+  color: antiquewhite;
+  background-color: rgba(220, 20, 60, 60%);
+}
+
+li.button {
+  margin-bottom: 30px;
+}
+
+input.button {
+  background-color: rgba(89, 211, 168, 0.3);
+  border: 1px solid #3f3f3f;
+  border-radius: 10px;
+  color: #222;
+  margin: 5px 5px 20px 5px;
+  padding: 8px 25px;
+  font-family: 'Noto Sans Display', sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+form {
+  align-items: center;
+}
+
+select {
+  background-color: transparent;
+  border: 1px solid #3f3f3f;
+  padding: 0.25em 1em;
+  cursor: pointer;
+  border-radius: 5px;
+  width: fit-content;
+  display: grid;
+  box-shadow: 0 2px 2px 2px #2222224d;
+  margin-bottom: 5px;
+}
+
+input[type='text'],
+input[type='number'],
+input[type='password'],
+input[type='email'],
+textarea {
+  border: none;
+  background-color: rgba(220, 20, 60, 20%);
+  margin: 3px 0;
+  box-shadow: 0 2px 2px 2px #2222224d;
+  padding: 5px;
+}
+
+input:focus {
+  outline: none;
+}
+
+input[type='submit']:hover {
+  cursor: pointer;
+}
+
+.restaurant-admin-content,
+.admin-content,
+.outer-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
