--- a/templates/admin.html
+++ b/templates/admin.html
@@ -3,9 +3,10 @@
 {% block title %}Hallintapaneeli{% endblock %}
 
 {% block content %}
-<section class='adminpanel'>
-  <h2>Hallintapaneeli</h2>
-  <section>
+<h2>Hallintapaneeli</h2>
+<section class='admin-content'>
+  
+  <section class='container'>
     <p>Anna käyttäjälle ravintolakäyttäjän oikeudet</p>
     <form action='/setasrestaurant' method='POST'>
       <select name='user' id='user'>
@@ -14,10 +15,10 @@
         {% endfor %}
       </select>
       <br>
-      <input type='submit' value='Vahvista'>
+      <input type='submit' value='Vahvista' class=button>
     </form>
   </section>
-  <section>
+  <section class='container'>
     <p>Poista käyttäjä</p>
     <form action='/deleteuser' method='POST'>
       <select name='user' id='user'>
@@ -26,10 +27,10 @@
         {% endfor %}
       </select>
       <br>
-      <input type='submit' value='Vahvista'>
+      <input type='submit' value='Vahvista' class='button'>
     </form>
   </section>
-  <section>
+  <section class='container'>
     <p>Poista ravintola</p>
     <form action='/deleterestaurant' method='POST'>
       <select name='restaurant' id='restaurant'>
@@ -38,7 +39,7 @@
         {% endfor %}
       </select>
       <br>
-      <input type='submit' value='Vahvista'>
+      <input type='submit' value='Vahvista' class='button'>
     </form>
   </section>
 </section>
