--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   {% include 'header.html' %}
-  {% block content %}{% endblock %}
+  <div class='content'>{% block content %}{% endblock %}</div>
   {% include 'footer.html' %}
 </body>
 </html>
