--- a/templates/reservation.html
+++ b/templates/reservation.html
@@ -5,26 +5,29 @@
 {% block content %}
   <h1>Tee varaus ravintolaan {{ restaurant.name }}</h1>
   {% if error == 1 %}
-  <p style='color:red'><strong>Valitsemillasi hakuehdoilla ei löytynyt vapaita pöytiä</strong></p>
+    <p style='color:red'><strong>Valitsemillasi hakuehdoilla ei löytynyt vapaita pöytiä</strong></p>
   {% endif %}
-  <form action='/restaurants/reservation/{{ restaurant.id }}/confirm' method='GET'>
-    <label for='pax'>Henkilömäärä: </label>
-    <input type='number' id='pax' name='pax' required>
-    <br>
-    <label for='date'>Päivämäärä: </label>
-    <input type='date' name='date' id='date' required oninput="makeReservationDayVisible()">
-    <br>
-    <label for='starttime'>Kellonaika: </label>
-    <p id='daynotavailable' style='color:red;display:none'>Ei pöytiä varattavissa tälle päivälle</p>
-    {% for day in restaurant.servicetimes %}
-    <select name='starttime' id='starttime' class='reservation_date_picker {{ day[0] }}'>
-      {% for time in day[1:] if time != '-' %}
-      <option value={{ time }}>{{ time }}</option>
-      {% endfor %}
-    </select>
-    {% endfor %}
-    <br>
-    <input type='submit' value='Tarkista saatavuus'>
-  </form>
+  <section class='outer-container'>
+    <section class='container'>
+      <form action='/restaurants/reservation/{{ restaurant.id }}/confirm' method='GET'>
+        <label for='pax'>Henkilömäärä: </label>
+        <input type='number' id='pax' name='pax' required>
+        <br>
+        <label for='date'>Päivämäärä: </label>
+        <input type='date' name='date' id='date' required oninput="makeReservationDayVisible()">
+        <br>
+        <label for='starttime'>Kellonaika: </label>
+        {% for day in restaurant.servicetimes %}
+        <select name='starttime' id='starttime' class='reservation_date_picker {{ day[0] }}'>
+          {% for time in day[1:] if time != '-' %}
+          <option value={{ time }}>{{ time }}</option>
+          {% endfor %}
+        </select>
+        {% endfor %}
+        <br>
+        <input type='submit' value='Tarkista saatavuus' class='button'>
+      </form>
+    </section>
+  </section>
   <script src='../../../static/script.js'></script>
 {% endblock %}
