--- a/templates/result.html
+++ b/templates/result.html
@@ -4,9 +4,11 @@
 
 {% block content %}
 <h1>Hakutulokset</h1>
-<ul>
-{% for result in results %}
-  <li><a href='/restaurants/{{ result.id }}'>{{ result.name }}</a></li>
-{% endfor %}
-</ul>
+<section>
+  <ul>
+  {% for result in results %}
+    <li class='button'><a href='/restaurants/{{ result.id }}' class='button'>{{ result.name }}</a></li>
+  {% endfor %}
+  </ul>
+</section>
 {% endblock %}
