--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,23 +4,27 @@
 
 {% block content %}
 <h1>Luo käyttäjätunnus</h1>
-<form action='/signup' method='POST'>
-  <label for="firstname">Etunimi:</label>
-  <input type='text' name='firstname' placeholder='Etunimi' id='firstname' required autofocus>
-  <br>
-  <label for="lastname">Sukunimi:</label>
-  <input type='text' name='lastname' placeholder='Sukunimi' id='lastname' required>
-  <br>
-  <label for="email">Sähköposti:</label>
-  <input type='email' name='email' placeholder='Sähköposti' id='email' required>
-  <br>
-  <label for="username">Käyttäjätunnus:</label>
-  <input type='text' name='username' placeholder='Käyttäjätunnus' id='username' required>
-  <br>
-  <label for="password">Salasana:</label>
-  <input type='password' name='password' placeholder='Salasana' id='password' required>
-  <br>
-  <input type='submit' value='Luo tunnus'>
-</form>
-<a href="/login">Kirjaudu sisään</a>
+<section class='outer-container'>
+  <section class='container'>
+    <form action='/signup' method='POST'>
+      <label for="firstname">Etunimi:</label>
+      <input type='text' name='firstname' placeholder='Etunimi' id='firstname' required autofocus>
+      <br>
+      <label for="lastname">Sukunimi:</label>
+      <input type='text' name='lastname' placeholder='Sukunimi' id='lastname' required>
+      <br>
+      <label for="email">Sähköposti:</label>
+      <input type='email' name='email' placeholder='Sähköposti' id='email' required>
+      <br>
+      <label for="username">Käyttäjätunnus:</label>
+      <input type='text' name='username' placeholder='Käyttäjätunnus' id='username' required>
+      <br>
+      <label for="password">Salasana:</label>
+      <input type='password' name='password' placeholder='Salasana' id='password' required>
+      <br>
+      <input type='submit' value='Luo tunnus' class='button'>
+    </form>
+    <a href='/login' class='button'>Kirjaudu sisään</a>
+  </section>
+</section>
 {% endblock %}
