--- a/templates/unauthorized.html
+++ b/templates/unauthorized.html
@@ -4,5 +4,5 @@
 
 {% block content %}
 <h3>Sinulla ei ole oikeuksia tehdä kyseistä toimintoa!</h3>
-<a href='/'>Palaa etusivulle</a>
+<a href='/' class='button'>Palaa etusivulle</a>
 {% endblock %}
