added final functionalities

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h2>Hallintapaneeli</h2>
-<section class='admin-content'>
+<section class='outer-container'>
   
   <section class='container'>
     <p>Anna käyttäjälle ravintolakäyttäjän oikeudet</p>
