--- a/templates/base.html
+++ b/templates/base.html
@@ -13,5 +13,6 @@
   {% include 'header.html' %}
   <div class='content'>{% block content %}{% endblock %}</div>
   {% include 'footer.html' %}
+  <script src={{ url_for('static', filename='script.js') }}></script>
 </body>
 </html>
