--- a/static/style.css
+++ b/static/style.css
@@ -104,10 +104,15 @@ section.container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 15%;
+  background-color: rgba(220, 20, 60, 20%);
+  box-shadow: 0 3px 5px 2px #2222224d;
+  max-height: 400px;
+  overflow: auto;
 }
 
 a.button {
-  background-color: rgba(89, 211, 168, 0.3);
+  background-color: rgb(60, 220, 165);
   border: 1px solid #3f3f3f;
   border-radius: 10px;
   color: #222;
@@ -126,7 +131,7 @@ li.button {
 }
 
 input.button {
-  background-color: rgba(89, 211, 168, 0.3);
+  background-color: rgb(60, 220, 165);
   border: 1px solid #3f3f3f;
   border-radius: 10px;
   color: #222;
@@ -135,6 +140,12 @@ input.button {
   font-family: 'Noto Sans Display', sans-serif;
   font-size: 18px;
   font-weight: 300;
+}
+
+input.button:hover {
+  background-color: rgba(220, 20, 60, 60%);
+  color: antiquewhite;
+  text-decoration: underline;
 }
 
 form {
@@ -173,12 +184,12 @@ input[type='submit']:hover {
   cursor: pointer;
 }
 
-.restaurant-admin-content,
-.admin-content,
 .outer-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  width: 80%;
+  margin: auto;
 }
 
 footer a {
@@ -189,7 +200,7 @@ footer a {
 footer a:hover {
   text-decoration: none;
   background-color: rgba(220, 20, 60, 40%);
-  padding: 3px 40px;
+  padding: 3px 50px;
   color: antiquewhite;
 }
 
