--- a/templates/restaurantadmin.html
+++ b/templates/restaurantadmin.html
@@ -6,7 +6,7 @@
 
 <h2>Muokkaa ravintolasi {{ restaurant.name }} tietoja</h2>
 
-<div class='restaurant-admin-content'>
+<div class='outer-container'>
   <section class='container'>
     <h3>Lisää menu</h3>
   
@@ -15,6 +15,12 @@
       <label for=/name>Menun nimi</label>
       <input type='text' name='name' id='name' placeholder='Lounaslista' required>
       <input type='submit' value='Lisää menu' class='button'>
+    </form>
+
+    <h3>Poista ravintola</h3>
+    <form action='/deleterestaurant' method='POST'>
+      <input type='hidden' value={{ restaurant.id }} name='restaurant' id='restaurant'>
+      <input type='submit' value='Poista' class='button'>
     </form>
   </section>
   
